--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-Flask==2.3.3 numpy==1.24.3 tensorflow==2.12.0 nltk==3.8.1 pyspellchecker==0.7.2
+Flask==2.0.3
+numpy==1.21.6
+tensorflow==2.10.0
+nltk==3.7
