--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
             "use": "@vercel/python",
             "config": {
                 "runtime": "python3.7",
-                "buildCommand": "pip install -r requirements.txt && python -m nltk.downloader punkt",
+                "buildCommand": "pip install -r requirements.txt && python -c \"import nltk; nltk.download('punkt', download_dir='./nltk_data')\"",
                 "outputDirectory": "."
             }
         },
